Correções para mobile

--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
                     <summary>Menu</summary>
                     <ul>
                         <li>
-                            <a href="#">Page 1Page 1Page 1Page 1Page 1Page 1</a>
+                            <a href="#">Page 1</a>
                         </li>
                         <li>
                             <a href="#">Page 2</a>
