--- a/views/index.html
+++ b/views/index.html
@@ -11,32 +11,37 @@
     <body>
 
         <header>
-            <h1>Site</h1>
+            <h1>
+                <p>Site</p>
+                <menu class="mobile-menu">
+                    <details>
+                        <summary>
+                            <p></p>
+                        </summary>
+                        <ul>
+                            <li>
+                                <a href="#">Page 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Page 2</a>
+                            </li>
+                            <li>
+                                <a href="#">Page 3</a>
+                            </li>
+                            <li>
+                                <a href="#">Page 4</a>
+                            </li>
+                            <li>
+                                <a href="#">Page 5</a>
+                            </li>
+                        </ul>
+                    </details>
+                </menu>
+
+            </h1>
             <div id="logo">
                 <img src="../public/images/fundo.jpg" alt="">
             </div>
-            <menu class="mobile-menu">
-                <details>
-                    <summary>Menu</summary>
-                    <ul>
-                        <li>
-                            <a href="#">Page 1</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 2</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 3</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 4</a>
-                        </li>
-                        <li>
-                            <a href="#">Page 5</a>
-                        </li>
-                    </ul>
-                </details>
-            </menu>
         </header>
 
         <menu class="normal-menu">
