Novo content background image

--- a/views/index.html
+++ b/views/index.html
@@ -132,6 +132,48 @@
                     </div>
                 </div>
 
+                <div class="content-2">
+                    <div class="content-title">
+                        <h3>Mais Imagens</h3>
+                    </div>
+                    <div class="content-body">
+                        <div class="background-image-boxes">
+                            <div class="background-image-boxes-title">
+                                <h3>Caixas</h3>
+                            </div>
+                            <div class="background-image-boxes-body">
+                                <div class="box">
+                                    <div class="box-title">
+                                        <h4>Caixa - 1</h4>
+                                    </div>
+                                    <div class="box-content">
+                                        Teste...
+                                    </div>
+                                </div>
+
+                                <div class="box">
+                                    <div class="box-title">
+                                        <h4>Caixa - 2</h4>
+                                    </div>
+                                    <div class="box-content">
+                                        Teste...
+                                    </div>
+                                </div>
+
+                                <div class="box">
+                                    <div class="box-title">
+                                        <h4>Caixa - 3</h4>
+                                    </div>
+                                    <div class="box-content">
+                                        Teste...
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </content>
 
