--- a/public/css/site.css
+++ b/public/css/site.css
@@ -46,6 +46,7 @@ content .contents{
 }
 
 content .contents .content-1 .content-title{
+    text-align: center;
     padding: 10px;
 }
 
@@ -121,6 +122,63 @@ content .contents .content-1 .content-body .content-1-images .content-1-images-c
     text-align: center;
 }
 
+content .contents .content-2 .content-title{
+    text-align: center;
+    padding: 10px;
+}
+
+content .contents .content-2 .content-body .background-image-boxes{
+    background-image: url("../images/pexels-emre-kuzu-4820763.jpg");
+    background-size: cover;
+    background-position: center center;
+}
+
+content .contents .content-2 .content-body .background-image-boxes .background-image-boxes-title{
+    padding: 20px;
+    text-align: center;
+    color: white;
+}
+
+content .contents .content-2 .content-body .background-image-boxes .background-image-boxes-body{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 10px;
+    height: 200px;
+}
+
+content .contents .content-2 .content-body .background-image-boxes .box{
+    flex-basis: 0;
+    flex-grow: 1;
+}
+
+content .contents .content-2 .content-body .background-image-boxes .box:hover .box-title{
+    margin-top: 0;
+}
+
+content .contents .content-2 .content-body .background-image-boxes .box:hover .box-content{
+    width: 100%;
+    height: 150px;
+    opacity: 1;
+}
+
+content .contents .content-2 .content-body .background-image-boxes .box .box-title{
+    text-align:center;
+    color: #ffffff;
+    border-bottom: 2px solid #ffffff;
+    margin-top: 65px;
+    transition: 1s all;
+}
+
+content .contents .content-2 .content-body .background-image-boxes .box .box-content{
+    padding-top: 10px;
+    text-align: center;
+    height: 0;
+    opacity: 0;
+    background: rgba(255, 255, 255, 0.2);
+    transition: 1s all;
+}
+
 footer .footer-content{
     padding: 10px;
     text-align: center;
@@ -133,43 +191,54 @@ footer .footer-content{
 @keyframes changeBackgroundColorLinearRadial {
     0%{
         background-image: radial-gradient(var(--default-color) 5%, #ffbd00 30%, #ffe800 100%);
+        opacity: 0.1;
     }
     6%{
         background-image: radial-gradient(var(--default-color) 6%, #ffbd00 50%, #ffe800 100%);
+        opacity: 0.1;
     }
     12.5%{
         background-image: radial-gradient(var(--default-color) 12.5%, #ffbd00 50%, #ffe800 100%);
+        opacity: 0.2;
     }
 
     20% {
         background-image: radial-gradient(var(--default-color) 20%, #ffbd00 65%, #ffe800 100%);
+        opacity: 0.3;
     }
 
     25%{
         background-image: radial-gradient(var(--default-color) 25%, #ffbd00 65%, #ffe800 100%);
+        opacity: 0.4;
     }
 
     33% {
         background-image: radial-gradient(var(--default-color) 33%, #ffbd00 65%, #ffe800 100%);
+        opacity: 0.5;
     }
 
     50% {
         background-image: radial-gradient(var(--default-color) 50%, #ffbd00 70%, #ffe800 100%);
+        opacity: 0.6;
     }
 
     65% {
         background-image: radial-gradient(var(--default-color) 65%, #ffbd00 70%, #ffe800 100%);
+        opacity: 0.7;
     }
 
     75% {
         background-image: radial-gradient(var(--default-color) 75%, #ffbd00 80%, #ffe800 100%);
+        opacity: 0.7;
     }
 
     88% {
         background-image: radial-gradient(var(--default-color) 88%, #ffbd00 80%, #ffe800 100%);
+        opacity: 0.8;
     }
 
     100% {
         background-image: radial-gradient(var(--default-color) 100%, #ffbd00 100%, #ffe800 100%);
+        opacity: 0.9;
     }
 }
