--- a/views/index.html
+++ b/views/index.html
@@ -14,30 +14,45 @@
             <h1>
                 <p>Site</p>
                 <menu class="mobile-menu">
-                    <details>
-                        <summary>
-                            <p></p>
-                        </summary>
-                        <ul>
-                            <li>
-                                <a href="#">Page 1</a>
-                            </li>
-                            <li>
-                                <a href="#">Page 2</a>
-                            </li>
-                            <li>
-                                <a href="#">Page 3</a>
-                            </li>
-                            <li>
-                                <a href="#">Page 4</a>
-                            </li>
-                            <li>
-                                <a href="#">Page 5</a>
-                            </li>
-                        </ul>
-                    </details>
-                </menu>
+                    <p></p>
+                    <ul>
+                        <li>
+                            <a href="javascript:void(0)">Page 1</a>
+                        </li>
 
+                        <li>
+                            <a href="javascript:void(0)">Page 2</a>
+                        </li>
+
+                        <li>
+                            <a href="javascript:void(0)">Page 3</a>
+                        </li>
+
+                        <li>
+                            <a href="javascript:void(0)">Page 4</a>
+                        </li>
+
+                        <li>
+                            <a href="javascript:void(0)">Page 5</a>
+                        </li>
+
+                        <li>
+                            <a href="javascript:void(0)">Page 6</a>
+                        </li>
+
+                        <li>
+                            <a href="javascript:void(0)">Page 7</a>
+                        </li>
+
+                        <li>
+                            <a href="javascript:void(0)">Page 8</a>
+                        </li>
+
+                        <li>
+                            <a href="javascript:void(0)">Page 8</a>
+                        </li>
+                    </ul>
+                </menu>
             </h1>
             <div id="logo">
                 <img src="../public/images/fundo.jpg" alt="">
@@ -47,19 +62,19 @@
         <menu class="normal-menu">
             <ul>
                 <li>
-                    <a href="#">Page 1</a>
+                    <a href="javascript:void(0)">Page 1</a>
                 </li>
                 <li>
-                    <a href="#">Page 2</a>
+                    <a href="javascript:void(0)">Page 2</a>
                 </li>
                 <li>
-                    <a href="#">Page 3</a>
+                    <a href="javascript:void(0)">Page 3</a>
                 </li>
                 <li>
-                    <a href="#">Page 4</a>
+                    <a href="javascript:void(0)">Page 4</a>
                 </li>
                 <li>
-                    <a href="#">Page 5</a>
+                    <a href="javascript:void(0)">Page 5</a>
                 </li>
             </ul>
         </menu>
@@ -79,7 +94,7 @@
                             </div>
                             <div class="content-1-images-body">
                                 <div class="content-1-images-title">
-                                    <a href="#">
+                                    <a href="javascript:void(0)">
                                         <h4>Titulo da Imagem 1</h4>
                                     </a>
                                 </div>
@@ -98,7 +113,7 @@
                             </div>
                             <div class="content-1-images-body">
                                 <div class="content-1-images-title">
-                                    <a href="#">
+                                    <a href="javascript:void(0)">
                                         <h4>Titulo da Imagem 2</h4>
                                     </a>
                                 </div>
@@ -117,7 +132,7 @@
                             </div>
                             <div class="content-1-images-body">
                                 <div class="content-1-images-title">
-                                    <a href="#">
+                                    <a href="javascript:void(0)">
                                         <h4>Titulo da Imagem 3</h4>
                                     </a>
                                 </div>
@@ -148,6 +163,7 @@
                                     </div>
                                     <div class="box-content">
                                         Teste...
+                                        <a href="javascript:void(0)">More Info</a>
                                     </div>
                                 </div>
 
@@ -157,6 +173,7 @@
                                     </div>
                                     <div class="box-content">
                                         Teste...
+                                        <a href="javascript:void(0)">More Info</a>
                                     </div>
                                 </div>
 
@@ -166,9 +183,51 @@
                                     </div>
                                     <div class="box-content">
                                         Teste...
+                                        <a href="javascript:void(0)">More Info</a>
                                     </div>
                                 </div>
 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content-3">
+                    <div class="content-title">
+                        <h3>Grupo de imagens</h3>
+                    </div>
+                    <div class="content-body">
+                        <div class="content-images-group">
+                            <div class="content-images-group-column-md">
+                                <div class="images-group-column column-md">
+                                    <a href="javascript:void(0)">
+                                        <img src="../public/images/pexels-artem-podrez-5108638.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="images-group-column column-md">
+                                    <a href="javascript:void(0)">
+                                        <img src="../public/images/pexels-vlada-karpovich-4450090.jpg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="content-images-group-column-lg">
+                                <div class="images-group-column column-lg">
+                                    <a href="javascript:void(0)">
+                                        <img src="../public/images/pexels-clive-kim-4221054.jpg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="content-images-group-column-md">
+                                <div class="images-group-column column-md">
+                                    <a href="javascript:void(0)">
+                                        <img src="../public/images/pexels-anna-shvets-4557403.jpg" alt="">
+                                    </a>
+                                </div>
+                                <div class="images-group-column column-md">
+                                    <a href="javascript:void(0)">
+                                        <img src="../public/images/pexels-elina-sazonova-4403924.jpg" alt="">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
