FE-2 Melhorias no lt-2

--- a/layout_2/views/index.html
+++ b/layout_2/views/index.html
@@ -31,7 +31,8 @@
 
         <content>
             <div class="content">
-                <div class="accordion accordion-tp-1" data-state="">
+
+                <div class="accordion accordion-tp-1">
                     <div class="accordion-title">
                         <h3>Teste</h3>
                     </div>
@@ -68,7 +69,9 @@
         </content>
 
         <footer>
-            Rodapé
+            <div class="footer-content">
+                <p>Rodapé</p>
+            </div>
         </footer>
 
     </body>
