--- a/layout_2/public/css/base.css
+++ b/layout_2/public/css/base.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Yu Gothic UI", serif;
+    font-family: "Abyssinica SIL", serif;
 }
 
 body{
@@ -59,4 +59,10 @@ content .content{
 
 footer{
     padding: 10px;
+    margin-top: 4px;
+    box-shadow: #c7c7c7 0 0 10px 5px;
+}
+
+footer .footer-content{
+    text-align: center;
 }
