--- a/layout_2/views/index.html
+++ b/layout_2/views/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../public/css/base.css">
         <link rel="stylesheet" href="../public/accordion/css/accordion.css">
         <title>Document</title>
@@ -14,16 +16,19 @@
 
         <header>
             <nav>
-                <h2>Title</h2>
+                <h1>Title</h1>
+                <div class="logo">
+                    <img src="https://api.logomaster.ai/logo-template-preview/preview-template-10038.svg" alt="">
+                </div>
                 <ul>
                     <li>
-                        <a href="#">Teste</a>
+                        <a href="#">Início</a>
                     </li>
                     <li>
-                        <a href="#">Teste</a>
+                        <a href="#">Contato</a>
                     </li>
                     <li>
-                        <a href="#">Teste</a>
+                        <a href="#">Sobre</a>
                     </li>
                 </ul>
             </nav>
@@ -32,45 +37,125 @@
         <content>
             <div class="content">
 
-                <div class="accordion accordion-tp-1">
-                    <div class="accordion-title">
-                        <h3>Teste</h3>
+                <section class="product-presentation">
+                    <div class="product-content">
+                        <div class="new-tag"></div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <div class="dashed-price">R$ 89,90</div>
+                                <div class="actual-price">R$ 49,90</div>
+                                <div class="percentage-off">38% Off</div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="accordion-content">
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        </p>
-                    </div>
-                </div>
 
-                <div class="accordion accordion-tp-1">
-                    <div class="accordion-title">
-                        <h3>Teste - 2</h3>
+                    <div class="product-content">
+                        <div class="new-tag"></div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="accordion-content">
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </p>
-                    </div>
-                </div>
 
-                <div class="accordion accordion-tp-2">
-                    <div class="accordion-title">
-                        <h3>Teste - Template - 2</h3>
+                    <div class="product-content">
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="accordion-content">
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                        </p>
+
+                    <div class="product-content">
+                        <div class="new-tag">
+
+                        </div>
+                        <div class="product-image">
+                            <a href="#">
+                                <img src="../public/images/480x480.png" alt="">
+                            </a>
+                        </div>
+                        <div class="product-details">
+                            <a href="#" class="name">
+                                Product
+                            </a>
+                            <div class="price">
+                                <p class="actual-price">R$ 119,90</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                </section>
+
+                <section>
+                    <div class="accordion accordion-tp-1">
+                        <div class="accordion-title">
+                            <h3>Teste</h3>
+                        </div>
+                        <div class="accordion-content">
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="accordion accordion-tp-1">
+                        <div class="accordion-title">
+                            <h3>Teste - 2</h3>
+                        </div>
+                        <div class="accordion-content">
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="accordion accordion-tp-2">
+                        <div class="accordion-title">
+                            <h3>Teste - Template - 2</h3>
+                        </div>
+                        <div class="accordion-content">
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            </p>
+                        </div>
+                    </div>
+                </section>
 
             </div>
         </content>
 
         <footer>
+            <div class="footer-header">
+                <div class="title">
+                    <h3>Footer Header</h3>
+                </div>
+            </div>
             <div class="footer-content">
-                <p>Rodapé</p>
+                <p>Footer Content</p>
             </div>
         </footer>
 
